// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MessageInput /> renders correctly 1`] = `
<div
  className="MuiInputBase-root-80 MuiInput-root-67 MessageInput-root-65 MuiInputBase-fullWidth-89 MuiInput-fullWidth-74 MuiInputBase-multiline-88 MuiInput-multiline-73 MuiInputBase-adornedEnd-85"
  onClick={[Function]}
  onKeyPress={[Function]}
>
  <div
    className="MuiPrivateTextarea-root-97"
  >
    <textarea
      aria-hidden="true"
      className="MuiPrivateTextarea-textarea-98 MuiPrivateTextarea-shadow-99"
      readOnly={true}
      rows="1"
      tabIndex={-1}
      value=""
    />
    <textarea
      aria-hidden="true"
      className="MuiPrivateTextarea-textarea-98 MuiPrivateTextarea-shadow-99"
      readOnly={true}
      rows={1}
      tabIndex={-1}
      value=""
    />
    <textarea
      className="MuiPrivateTextarea-textarea-98 MuiInputBase-input-90 MuiInput-input-75 MuiInputBase-inputMultiline-92 MuiInput-inputMultiline-77 MuiInputBase-inputAdornedEnd-96"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Type your message…"
      rows={1}
      style={
        Object {
          "height": 19,
        }
      }
      value=""
    />
  </div>
  <div
    className="MuiInputAdornment-root-100 MessageInput-sendIcon-66 MuiInputAdornment-positionEnd-103"
  >
    <button
      aria-label="Send message"
      className="MuiButtonBase-root-110 MuiIconButton-root-104"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-109"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-113"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-122"
      />
    </button>
  </div>
</div>
`;

exports[`<MessageInput /> renders correctly disabled 1`] = `
<div
  className="MuiInputBase-root-80 MuiInput-root-67 MessageInput-root-65 MuiInputBase-disabled-83 MuiInput-disabled-70 MuiInputBase-fullWidth-89 MuiInput-fullWidth-74 MuiInputBase-multiline-88 MuiInput-multiline-73 MuiInputBase-adornedEnd-85"
  onClick={[Function]}
  onKeyPress={[Function]}
>
  <div
    className="MuiPrivateTextarea-root-97"
  >
    <textarea
      aria-hidden="true"
      className="MuiPrivateTextarea-textarea-98 MuiPrivateTextarea-shadow-99"
      readOnly={true}
      rows="1"
      tabIndex={-1}
      value=""
    />
    <textarea
      aria-hidden="true"
      className="MuiPrivateTextarea-textarea-98 MuiPrivateTextarea-shadow-99"
      readOnly={true}
      rows={1}
      tabIndex={-1}
      value=""
    />
    <textarea
      className="MuiPrivateTextarea-textarea-98 MuiInputBase-input-90 MuiInput-input-75 MuiInputBase-disabled-83 MuiInput-disabled-70 MuiInputBase-inputMultiline-92 MuiInput-inputMultiline-77 MuiInputBase-inputAdornedEnd-96"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Type your message…"
      rows={1}
      style={
        Object {
          "height": 19,
        }
      }
      value=""
    />
  </div>
  <div
    className="MuiInputAdornment-root-100 MessageInput-sendIcon-66 MuiInputAdornment-positionEnd-103"
  >
    <button
      aria-label="Send message"
      className="MuiButtonBase-root-110 MuiIconButton-root-104"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-109"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-113"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-122"
      />
    </button>
  </div>
</div>
`;
